Revert "fix: text wrapping"
This reverts commit f663b67990ad7842821775c7454eed16fafa44ae.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -140,11 +140,6 @@ nav ul li:hover a {
   overflow: hidden;
 }
 
-.resto-item .desc {
-  height: 160px;
-  overflow: hidden;
-}
-
 .thumbnail-item {
   position: relative;
 }
